button spacing, fix for chang'e card image

--- a/style.css
+++ b/style.css
@@ -12,8 +12,7 @@ input.buttons {
   width: 100%;
   height: auto;
   display: block;
-  margin-top: 25px;
-  padding: 15px;
+  margin-top: 10px;
   background-repeat: no-repeat;
   width: 118px;
   height: 118px;
@@ -62,6 +61,7 @@ input:focus{
 }
 
 #reset{
+  width: 100%;
   color: white;
   background-color:rgb(219, 18, 58);
 }
